[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Juno Yu <jxy35@hitit.xyz>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want. 
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "0.7.15"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
